--- a/dash/templates/dash/layouts/base_placeholder_edit.html
+++ b/dash/templates/dash/layouts/base_placeholder_edit.html
@@ -1,7 +1,7 @@
 {% load i18n dash_tags %}
 
 {% for cell_html_class, cell_position in widget_cells %}
-    <div class="empty-widget-cell {{ cell_html_class }}">
+    <div class="plugin empty-widget-cell {{ cell_html_class }}" data-id="{{ cell_position }}">
         <a href="{% if workspace %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder.uid workspace=workspace position=cell_position %}{% else %}{% url 'dash.plugin_widgets' placeholder_uid=placeholder.uid position=cell_position %}{% endif %}"
            class="add-plugin" title="{% trans 'Add widget' %}">
             <span class="material-icons">add_circle</span>
@@ -11,7 +11,7 @@
 {% for entry in dashboard_entries %}
     {% get_dash_plugin entry as plugin %}
 
-    <div id="{{ plugin.html_id }}" class="plugin {{ plugin.html_class }}">
+    <div id="{{ plugin.html_id }}" class="plugin {{ plugin.html_class }}" data-id="{{ plugin.position }}">
         <div class="ventana-pin blue">
             <a href="{% url 'dash.delete_dashboard_entry' entry.pk %}" class="remove-plugin"
                title="{% trans 'Remove widget' %}">
