--- a/notifications/templates/notifications/list.html
+++ b/notifications/templates/notifications/list.html
@@ -1,32 +1,37 @@
 {% extends 'account/base_interface.html' %}
 {% load static %}
 {% block include_files %}
-    <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
-    <link rel="stylesheet" href="{% static "css/notifications.css" %}" type="text/css" media="all"
-          onload="if(media!='all')media='all'">
+<meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
+<link rel="stylesheet" href="{% static "css/notifications.css" %}" type="text/css" media="all"
+onload="if(media!='all')media='all'">
 {% endblock %}
 {% block title %}Notificaciones - {{ request.user }}{% endblock %}
 {% block content %}
-    <div class="container">
-        {% if notifications %}
-            <div class="row">
-                <div class="col s12 all-notifications-options">
-                    <a class="waves-effect waves-light btn white blue-text text-darken-1" href="{% url 'notifications:mark_all_as_read' %}">Todas
-                        leídas</a>
-                    <a class="waves-effect waves-light btn white blue-text text-darken-1" href="{% url 'notifications:mark_all_as_unread' %}">Todas sin
-                        leer</a>
-                    <a class="waves-effect waves-light btn red" href="{% url 'notifications:mark_all_as_deleted' %}">Eliminar
-                        todas</a>
-                </div>
-            </div>
-        {% endif %}
-        <div class="row">
-            <ul class="collection">
-                {% for notice in notifications %}
-                    <li class="collection-item" data-id="{{ notice.id }}">{% include 'notifications/notice.html' %}</li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
+<div class="container">
+    {% if notifications %}
+    <div class="row">
+        <div class="col s12 all-notifications-options">
+            <a class="waves-effect waves-light btn white blue-text text-darken-1" href="{% url 'notifications:mark_all_as_read' %}" title="Marcar todas como leídas">Todas
+            leídas</a>
+            <a class="waves-effect waves-light btn white blue-text text-darken-1" href="{% url 'notifications:mark_all_as_unread' %}" title="Marcar todas sin leer">Todas sin
+            leer</a>
+        <a class="waves-effect waves-light btn red" 
+        title="Eliminar todas las notificaciones"
+        href="{% url 'notifications:mark_all_as_deleted' %}">Eliminar
+    todas</a>
+    <a class="waves-effect wavas-light btn grey lighten-3 black-text" 
+            href="{% url 'user_profile:account_notifications' %}" title="Configurar notificaciones"><i class="material-icons">settings</i>
+        </a>
+</div>
+</div>
+{% endif %}
+<div class="row">
+    <ul class="collection">
+        {% for notice in notifications %}
+        <li class="collection-item" data-id="{{ notice.id }}">{% include 'notifications/notice.html' %}</li>
+        {% endfor %}
+    </ul>
+</div>
+</div>
 
 {% endblock %}
