--- a/photologue_groups/templates/photologue_groups/photo_gallery.html
+++ b/photologue_groups/templates/photologue_groups/photo_gallery.html
@@ -15,7 +15,7 @@
 <div class="container" id="crop-avatar">
     <div class="row">
         <div class="col l12 m12 s12 container-gallery">
-            <a id="btn-upload-photo" class="btn-floating btn-large waves-effect waves-light blue darken-1"><i
+            <a id="btn-upload-photo" class="btn-floating btn waves-effect waves-light blue darken-1"><i
                 class="material-icons">add</i></a>
                 <div class="row">
                     {% if object_list %}
