--- a/photologue_groups/templates/photologue_groups/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/publications_entries.html
@@ -182,5 +182,5 @@
 </div>
 {% endfor %}
 {% if publications.has_next %}
-<a id="load-comments" class="waves-effect waves-light btn-large blue darken-1 white-text center" href="?page={{ publications.next_page_number }}">Cargar comentarios</a>
+<a id="load-comments" class="waves-effect waves-light btn blue darken-1 white-text center" href="?page={{ publications.next_page_number }}">Cargar comentarios</a>
 {% endif %}
