--- a/skyfolk/templates/account/follow_entries.html
+++ b/skyfolk/templates/account/follow_entries.html
@@ -13,7 +13,7 @@
 </div>
 {% if followed.has_next %}
     <div class="row center">
-        <a class="infinite-more-followed waves-effect waves-light btn-large blue darken-1 white-text center"
+        <a class="infinite-more-followed waves-effect waves-light btn blue darken-1 white-text center"
            href="?page={{ followed.next_page_number }}&qs=following"><i class="material-icons">add</i></a>
         <div class="progress load_following" style="display: none">
             <div class="indeterminate blue darken-1"></div>
