--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -231,7 +231,7 @@
             {% endfor %}
         </div>
         {% if object_list.has_next %}
-            <a class="infinite-more-link waves-effect waves-light btn-large blue darken-1 white-text center"
+            <a class="infinite-more-link waves-effect waves-light btn blue darken-1 white-text center"
                href="?page={{ object_list.next_page_number }}">More</a>
         {% endif %}
         <div class="progress loading_skyline" style="display: none">
