--- a/photologue/templates/photologue/videos/new_reply.html
+++ b/photologue/templates/photologue/videos/new_reply.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <button type="button" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue enviar">Enviar<i
+        <button type="submit" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue enviar">Enviar<i
                 class="material-icons right">send</i></button>
     </form>
 </div>
