--- a/photologue/templates/photologue/videos/publication_detail.html
+++ b/photologue/templates/photologue/videos/publication_detail.html
@@ -186,7 +186,7 @@
         {% endfor %}
         </div>
         {% if publication.has_next %}
-        <a class="infinite-more-link waves-effect waves-light btn-large blue darken-1 white-text center" href="?page={{ publication.next_page_number }}">More</a>
+        <a class="infinite-more-link waves-effect waves-light btn blue darken-1 white-text center" href="?page={{ publication.next_page_number }}">More</a>
         {% endif %}
         <div class="progress loading_skyline" style="display: none">
             <div class="indeterminate blue darken-1"></div>
