--- a/photologue_groups/templates/photologue_groups/videos/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/videos/publications_entries.html
@@ -164,7 +164,7 @@
     <div class="col s12">
         {% with node.get_children_count as descendants %}
         {% if descendants > 0 %}
-            <a class="waves-effect waves-light btn-large blue darken-1 white-text center load_more_descendants"
+            <a class="waves-effect waves-light btn blue darken-1 white-text center load_more_descendants"
             href="#"
             data-id="{{ node.id }}" data-created="{{ node.created|date:"U"}}"><i class=" material-icons left">expand_more</i>Cargar
             comentarios (<span class="child_count">{{ descendants }}</span>)</a>
@@ -182,5 +182,5 @@
 </div>
 {% endfor %}
 {% if publications.has_next %}
-<a id="load-comments" class="waves-effect waves-light btn-large blue darken-1 white-text center" href="?page={{ publications.next_page_number }}">Cargar comentarios</a>
+<a id="load-comments" class="waves-effect waves-light btn blue darken-1 white-text center" href="?page={{ publications.next_page_number }}">Cargar comentarios</a>
 {% endif %}
