--- a/skyfolk/templates/account/new_reply.html
+++ b/skyfolk/templates/account/new_reply.html
@@ -27,7 +27,7 @@ Nueva respuesta a una publicacion
                 </div>
             </div>
         </div>
-        <button type="button" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue enviar">Enviar<i
+        <button type="submit" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue enviar">Enviar<i
                 class="material-icons right">send</i></button>
     </form>
 </div>
