--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -183,7 +183,7 @@
                             <div class="col s12">
                                 {% with node.get_children_count as descendants %}
                                     {% if descendants > 0 %}
-                                        <a class="waves-effect waves-light btn-large blue darken-1 white-text center load_more_publications"
+                                        <a class="waves-effect waves-light btn blue darken-1 white-text center load_more_publications"
                                            href="/publication/group/load/replies/?page=1&pubid={{ node.id }}"
                                            data-id="{{ node.id }}" data-created="{{ node.created|date:"U" }}"><i
                                                 class=" material-icons left">expand_more</i>Cargar
