--- a/skyfolk/templates/channels/new_video_publication.html
+++ b/skyfolk/templates/channels/new_video_publication.html
@@ -161,7 +161,7 @@
     <div class="col s12">
         {% with node.get_children_count as descendants %}
         {% if descendants > 0 %}
-            <a class="waves-effect waves-light btn-large blue darken-1 white-text center load_more_descendants"
+            <a class="waves-effect waves-light btn blue darken-1 white-text center load_more_descendants"
             href="#"
             data-id="{{ node.id }}" data-created="{{ node.created|date:"U"}}"><i class=" material-icons left">expand_more</i>Cargar
             comentarios (<span class="child_count">{{ descendants }}</span>)</a>
