--- a/skyfolk/templates/groups/new_reply.html
+++ b/skyfolk/templates/groups/new_reply.html
@@ -27,7 +27,7 @@ Nueva respuesta a una publicacion
             </div>
         </div>
         <div class="row">
-            <button type="button" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue group_reply">
+            <button type="submit" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue group_reply">
                 Enviar<i
                     class="material-icons right">send</i></button>
         </div>
