--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -304,7 +304,7 @@ a.fontawesome-cog:hover {
     cursor: pointer;
 }
 
-.options_comentarios ul .like-comment, .quote-comment, .reply-comment, .add-timeline, .remove-timeline, .hate-comment, .trash-comment {
+.options_comentarios ul > li {
     margin-left: 3%;
 }
 
