--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -13,18 +13,6 @@
                     <div class="usr-img img-responsive">{% avatar node.author %}</div>
                 </div>
                 <div class="col articulo l11 s10">
-                  <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
-                  data-delay="50"
-                  data-tooltip="Ver conversación completa"><a class="material-icons md-18" href="/publication/{{ node.id }}/">open_in_new</a></span>
-               {% if user.id == node.author.id %}
-                   {% if node.event_type == 1 or node.event_type == 3 %}
-               <span data-id="{{ node.pk }}"
-                                      class="top-options edit-comment tooltipped"
-                                      data-position="bottom"
-                                      data-delay="50"
-                                      data-tooltip="Editar comentario"><i class="material-icons md-18">mode_edit</i></span>
-                       {% endif %}
-               {% endif %}
                     <h2 class="author-header"><a
                         href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                         {% if node.parent %}
@@ -166,37 +154,10 @@
                     </div>
                     <div class="row">
                         <div class="divider"></div>
-                        <div class="options_comentarios col s12">
-                            <ul class="opciones">
-                                    {% if user.id == node.author.id or user.id == user_profile.id %}
-                                        {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
-                                        <li class="trash-comment" title="Borrar comentario"><i class="material-icons md-18">delete_forever</i>
-                                        </li>
-                                    {% endif %}
-                                        {% comment %} Si el usuario esta logueado {% endcomment %}
-                                        {% with node.user_give_me_hate.all as hates %}
-                                        <li title="No me gusta" class="hate-comment">
-                                            <i class="material-icons md-18">keyboard_arrow_down</i>
-                                            <i class="hate-value"></i>
-                                        </li>
-                                        {% endwith %}
-                                        {% with node.user_give_me_like.all as likes %}
-                                        <li title="¡Me gusta!" class="like-comment" {% if user in likes %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                            <i class="material-icons md-18">keyboard_arrow_up</i>
-                                            <i class="like-value"></i>
-                                        </li>
-                                        {% endwith %}
-                                        <li id="share-{{node.pk}}" data-id="{{ node.pk }}" class="add-timeline" title="Añadir a mi skyline"
-                                        >
-                                        <i class="material-icons md-18">format_quote</i>
-                                        <i class="share-values"></i>
-                                        </li>
-                                    <li title="Responder" class="reply-comment" id="reply-caja-comentario-{{ node.pk }}">
-                                    <i class="material-icons md-18">reply</i>
-                                    </li>
-                                </ul>
-             </div>
-         </div>
+                        {% with node.board_owner as user_profile %}
+                        {% include "publications_base/publication_options.html" %}
+                        {% endwith %}
+                        </div>
          {% if user.id == node.author.id %}
          <div data-user-id="{{ node.author.pk }}" id="author-controls-{{ node.pk }}"
                                  class="author-controls">
