--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -72,18 +72,6 @@
                                         <div class="usr-img img-responsive">{% avatar node.author %}</div>
                                     </div>
                                     <div class="articulo col l11 s10">
-                                        <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
-                              data-delay="50"
-                              data-tooltip="Ver conversación completa"><a class="material-icons"
-                                                                          href="{% url 'publications_groups:detail_group_publication' pk=node.id %}">open_in_new</a></span>
-                                {% if user.id == node.author.id %}
-                                        <span data-id="{{ node.pk }}"
-                                              class="top-options edit-comment tooltipped"
-                                              data-position="bottom"
-                                              data-delay="50"
-                                              data-tooltip="Editar comentario"><i
-                                                class="material-icons">mode_edit</i></span>
-                                {% endif %}
                                         <h2 class="author-header"><a
                                                 href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                                             {% if node.parent %}
@@ -161,37 +149,9 @@
                                 </div>
                                 <div class="row">
                                     <div class="divider"></div>
-                                    <div class="options_comentarios col s12" data-id="{{ node.id }}"
-                                         data-board="{{ node.board_group.id }}">
-                                        <ul class="opciones">
-                                            {% if user.id == node.author.id or enable_control_pubs_btn %}
-                                                <li class="trash-comment" title="Borrar comentario"><i
-                                                        class="material-icons">delete_forever</i>
-                                                </li>
-                                            {% endif %}
-                                            {% comment %} Si el usuario esta logueado {% endcomment %}
-                                            <li title="No me gusta" class="hate-comment" {% if node.have_hate %}
-                                            style="color: rgb(186, 104, 200);"{% endif %}>
-                                                <i class="material-icons md-18">keyboard_arrow_down</i>
-                                                <i class="hate-value">{{ node.hates|zero_to_empty }}</i>
-                                            </li>
-                                            <li title="¡Me gusta!" class="like-comment"
-                                                    {% if node.have_like %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                                <i class="material-icons md-18">keyboard_arrow_up</i>
-                                                <i class="like-value">{{ node.likes|zero_to_empty }}</i>
-                                            </li>
-                                            <li title="Añadir a mi skyline" id="share-{{ node.id }}"
-                                                data-id="{{ node.pk }}"
-                                                class={% if node.have_shared %}"remove-timeline"{% else %}
-                                                    "add-timeline"{% endif %}
-                                            ><i class="material-icons md-18">format_quote</i><i
-                                                class="share-values"> {{ node.total_shared|zero_to_empty }}</i></li>
-                                            <li title="Responder" class="reply-comment"
-                                                id="reply-caja-comentario-{{ node.pk }}"><i
-                                                    class="material-icons md-18">reply</i>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                    {% with group_profile.owner as user_profile %}
+                                        {% include "publications_base/publication_options.html" %}
+                                    {% endwith %}
                                 </div>
                                 {% if user.id == node.author.id %}
                                         <div id="author-controls-{{ node.pk }}"
